# APLOSE

./: .gitignore  .gitlab-ci.yml  CITATION.cff  CONTRIBUTING.md  GETTING_STARTED_SIMPLE_NETCDF.md  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  pyproject-docker.toml  pyproject.toml
.github/workflows/: backend.yml  deploy-coverage.yml  documentation.yml  frontend.yml
aplose_audio_processor/: audio_processor.py  cli.py  generator.py
backend/: asgi.py  schema.py  urls.py
backend/api/: urls.py
backend/aplose/: urls.py
backend/background_tasks/: apps.py  consumer.py  urls.py
backend/old_api/: urls.py
backend/osmosewebsite/: urls.py
backend/settings/: base.py  development.py  production.py
backend/sql/: tests.py
backend/storage/: apps.py  enums.py  exceptions.py  models.py  types.py  utils.py
backend/utils/: filters.py  managers.py  middlewares.py  osekit_replace.py  schema.py  serializers.py  tests.py
dockerfiles/: back-asgi.dockerfile  front.dockerfile
example_datasets/netcdf_example/: dataset.json
examples/: README.md  create_simple_example_dataset.py  generate_netcdf_dataset.py
examples/aplose_audio_processor/: audio_processor.py  cli.py  generator.py
frontend/: README.md  babel.config.js  codegen.ts  package-lock.json  package.json  playwright.config.ts  schema.graphql  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/docs/: index.md
frontend/src/: App.tsx  main.tsx
frontend/tests/: 00-Home.spec.ts  00_Home.spec.ts  01-Login.spec.ts  01_Login.spec.ts  02-CampaignList-Navbar.spec.ts  02-CampaignList.spec.ts  02_Navbar.spec.ts  03-CampaignCreate.spec.ts  03_Datasets.spec.ts  03_Datasets_Detail.spec.ts  03_Datasets_import.spec.ts  03a_Datasets.spec.ts  03b_Dataset_Detail.spec.ts  04-CampaignDetail.spec.ts  04_Campaigns.spec.ts  04a_Campaigns.spec.ts  04b_Campaign_detail.spec.ts  04c_Campaign_create.spec.ts  05-PhaseDetail-ProgressModal.spec.ts  05-PhaseDetail.spec.ts  05_Campaign_create.spec.ts  05a_Phase_Detail.spec.ts  05b_Phase_edit_annotators.spec.ts  05c_Phase_import_annotations.spec.ts  06-PhaseEditAnnotators.spec.ts  06_Campaign_detail.spec.ts  06_Spectrogram_annotation.spec.ts  06a_Spectrogram_annotation_base.spec.ts  06a_Spectrogram_annotation_navigation.spec.ts  06a_Spectrogram_annotation_weak_annotation.spec.ts  06b_Spectrogram_annotation_weak_annotation.spec.ts  06c_Spectrogram_annotation_box_annotation.spec.ts  06c_Spectrogram_annotation_strong_annotation.spec.ts  06d_Spectrogram_annotation_comment.spec.ts  06d_Spectrogram_annotation_point_annotation.spec.ts  06e_Spectrogram_annotation_comment.spec.ts  (+18 more)
volumes/: .gitignore
website/: codegen.ts  package-lock.json  package.json  schema.graphql
website/src/: App.tsx  (+1 more)
(+1411 files in other folders)
